apps/media/prowlarr/config/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: media-stack
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - prowlarr.internal.reli.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 9696
